fix(homescren): make app align to left of the screen when overflowing

--- a/client/src/pages/Guest.css
+++ b/client/src/pages/Guest.css
@@ -101,6 +101,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
+  align-content: flex-start;
   flex-direction: column;
   flex-wrap: wrap;
 
